# cha

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: mobile.yml  release.yml
cha-core/: Cargo.toml
cha-core/src/: dictionary.rs  lib.rs  pattern.rs  search.rs
cha-gui/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
cha-gui/src-tauri/capabilities/: default.json  desktop.json
cha-gui/src-tauri/icons/: icon.icns
cha-gui/src-tauri/src/: desktop.rs  lib.rs  main.rs
cha-gui/ui/: index.html  main.js  pattern-syntax.css  pattern-syntax.html  styles.css  transport.js
cha-gui/ui/tests/: run.sh  transport.test.js
cha-web/: Cargo.toml  build.rs
cha-web/src/: main.rs
ci/: words-stub.txt
deploy/: Caddyfile  Dockerfile  README.md  docker-compose.yml  nginx.conf
src/: dictionary.rs  main.rs  pattern.rs
