[workspace]
members = ["cha-core", "cha-gui/src-tauri"]

[package]
name = "cha"
version = "0.4.0"
edition = "2021"

[[bin]]
name = "cha"
path = "src/main.rs"

[dependencies]
anstream = "1"
anstyle = "1"
cha-core = { path = "cha-core" }
clap = { version = "4", features = ["derive"] }
rustyline = "14"
terminal_size = "0"
