[package]
name = "cha-gui"
version.workspace = true
edition = "2021"

# Tauri mobile loads the app as a library from the platform shell (a staticlib
# on iOS, a cdylib on Android), while the desktop binary links it as an rlib.
# One `run()` in lib.rs serves all five platforms; main.rs is a thin shim. The
# `_lib` name avoids a Windows bin/lib artifact collision (cargo#8519). The
# crate-type can't be cfg-gated, so a desktop `cargo build -p cha-gui` links all
# three; use `--bins` to skip the staticlib/cdylib when only the exe is wanted.
[lib]
name = "cha_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
# `serde` is required, not optional, here: the search wire types cross the IPC
# boundary to the front end, so they must serialize.
cha-core = { path = "../../cha-core", features = ["serde"] }
serde = { version = "1", features = ["derive"] }

# Pin transitive `time` to 0.3.47: 0.3.48 trips an E0119 coherence false-positive
# (rust-lang/rust#100712) against cookie 0.18.1 under rustc 1.96. 0.3.47 still
# satisfies plist's `^0.3.47`. Remove once tauri/cookie or rustc resolves it.
time = "=0.3.47"
